Added Cornifer icon

--- a/Cornifer.uplugin
+++ b/Cornifer.uplugin
@@ -3,7 +3,7 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "Cornifer",
-	"Description": "",
+	"Description": "Maps Maps Maps",
 	"Category": "Other",
 	"CreatedBy": "AStruthers2000",
 	"CreatedByURL": "",
